test/neg/neg-reduce1.errc
.upcxx::reduce_.all.one.<T>. only permitted for TriviallySerializable T
